--- a/WpfApp1/adminWPF/MainWindow.xaml
+++ b/WpfApp1/adminWPF/MainWindow.xaml
@@ -1,12 +1,24 @@
-﻿<Window x:Class="adminWPF.MainWindow"
+﻿<Window x:Class="VasuthalozatAdmin.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:adminWPF"
+        xmlns:local="clr-namespace:VasuthalozatAdmin"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Bejelentkezés" Height="450" Width="800">
+	<StackPanel HorizontalAlignment="Center">
+		<StackPanel Orientation="Horizontal">
+			<Label>Felhasználónév: </Label>
+			<TextBox Width="500" Name="tbUsername"></TextBox>
+		</StackPanel>
+		<StackPanel Orientation="Horizontal">
+			<Label>Jelszó:</Label>
+			<TextBox Width="500" Name="tbPassword"></TextBox>
+		</StackPanel>
+		<Button x:Name="btnLogin" Height="30" Width="80" Click="btnLogin_Click">Bejelentkezés</Button>
+		<StackPanel Orientation="Horizontal">
+			<Button x:Name="btnAddCity" Height="30" Width="200" Click="btnAddCity_Click">Város hozzáadása az adatbázishoz</Button>
+		</StackPanel>
 
-    </Grid>
+	</StackPanel>
 </Window>
